--- a/shopay/src/app/account/register/register.component.html
+++ b/shopay/src/app/account/register/register.component.html
@@ -1,1 +1,62 @@
-<p>register works!</p>
+<section class="vh-100">
+    <div class="container py-5 h-100">
+      <div class="row d-flex align-items-center justify-content-center h-100">
+        <div class="col-md-8 col-lg-7 col-xl-6">
+          <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.svg" class="img-fluid" alt="Phone image">
+        </div>
+        <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
+          <form [formGroup]="registerForm" (ngSubmit)="onSubmit">
+            <div class="form-outline mb-4">
+              <input type="name" formControlName="displayName" id="form1Example13" class="form-control form-control-lg" />
+              <label class="form-label" for="form1Example13">Display Name</label>
+            </div>
+            <!-- Email input -->
+            <div class="form-outline mb-4">
+              <input type="email" formControlName="email" id="form1Example13" class="form-control form-control-lg" />
+              <label class="form-label" for="form1Example13">Email address</label>
+            </div>
+  
+            <!-- Password input -->
+            <div class="form-outline mb-4">
+              <input type="password" formControlName="password" id="form1Example23" class="form-control form-control-lg" />
+              <label class="form-label" for="form1Example23">Password</label>
+            </div>
+  
+            <div class="d-flex justify-content-around align-items-center mb-4">
+              <!-- Checkbox -->
+              <div class="form-check">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  value=""
+                  id="form1Example3"
+                  checked
+                />
+                <label class="form-check-label" for="form1Example3"> Remember me </label>
+              </div>
+              <a href="#!">Forgot password?</a>
+            </div>
+            <ul class="text-danger list-unstyled" *ngIf="errors">
+              <li *ngFor="let error of errors">
+                {{error}}
+              </li>
+            </ul>
+            <!-- Submit button -->
+            <button [disabled]="registerForm.invalid" type="submit" class="btn btn-primary btn-lg btn-block" (click)="submitUserInfo(userInfo)">Register</button>
+  
+            <div class="divider d-flex align-items-center my-4">
+              <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
+            </div>
+  
+            <!-- <a class="btn btn-primary btn-lg btn-block" style="background-color: #3b5998" href="#!" role="button">
+              <i class="fab fa-facebook-f me-2"></i>Continue with Facebook
+            </a> -->
+            <button mat-raised-button [disabled]="!userInfo.valid" class="ecomm-login-submit" (click)="submitUserInfo(userInfo)">
+              Submit
+            </button>
+            <button (click)="submitLogin()">Facebook Authentication</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
